--- a/svelte-from-scratch/package.json
+++ b/svelte-from-scratch/package.json
@@ -13,9 +13,12 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-awesome": "^2.2.1"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "sirv-cli": "^0.4.4"
   }
 }
