--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "@xec/svelte-todo": "github:xec/svelte-todo",
     "cypress": "^3.8.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.20.0",
