--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xec/streamline.git"
+  },
+  "homepage": "https://xec.github.io/",
+  "author": "Eric Morton",
+  "license": "GNU GPLv3",
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
@@ -27,7 +34,7 @@
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@xec/snowflakes": "0.0.3",
-    "@xec/svelte-todo": "^1.0.0",
+    "@xec/svelte-todo": "^1.0.3",
     "cypress": "^3.8.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.20.0",
