--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://xec.github.io/",
   "author": "Eric Morton",
-  "license": "GNU GPLv3",
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
@@ -33,7 +33,7 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.2.0",
-    "@xec/snowflakes": "0.0.3",
+    "@xec/snowflakes": "0.0.7",
     "@xec/svelte-todo": "^1.0.3",
     "cypress": "^3.8.2",
     "npm-run-all": "^4.1.5",
