--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
   "dependencies": {
     "compression": "^1.7.1",
     "polka": "next",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@rollup/plugin-commonjs": "^11.0.2",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/runtime": "^7.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "@xec/snowflakes": "0.0.7",
     "@xec/svelte-todo": "^1.0.4",
-    "cypress": "^4.3.0",
+    "cypress": "^4.12.1",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.20.0",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.2.0",
-    "sapper": "^0.27.12",
-    "svelte": "^3.0.0",
-    "svelte-awesome": "^2.2.1"
+    "rollup": "^1.32.1",
+    "rollup-plugin-svelte": "^5.2.3",
+    "rollup-plugin-terser": "^5.3.1",
+    "sapper": "^0.28.8",
+    "svelte": "^3.25.1",
+    "svelte-awesome": "^2.3.0"
   }
 }
