--- a/package.json
+++ b/package.json
@@ -32,16 +32,17 @@
     "@babel/runtime": "^7.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@xec/snowflakes": "0.0.7",
     "@xec/svelte-todo": "^1.0.4",
     "cypress": "^4.12.1",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.32.1",
-    "rollup-plugin-svelte": "^5.2.3",
-    "rollup-plugin-terser": "^5.3.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.28.1",
+    "rollup-plugin-svelte": "^6.0.1",
+    "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.8",
     "svelte": "^3.25.1",
     "svelte-awesome": "^2.3.0"
