--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-replace": "^2.2.0",
-    "@xec/snowflakes": "0.0.7",
+    "@xec/snowflakes": "^0.0.8",
     "@xec/svelte-todo": "^1.0.4",
-    "cypress": "^4.3.0",
+    "cypress": "^8.7.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.0.2",
