--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.10",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@xec/snowflakes": "^0.0.8",
@@ -24,7 +25,7 @@
 		"eslint-plugin-svelte": "^2.39.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
+		"svelte": "^4.2.17",
 		"svelte-awesome": "^3.3.1",
 		"svelte-check": "^3.8.0",
 		"tslib": "^2.6.2",
