--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.5.10",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"@xec/snowflakes": "^0.0.8",
 		"@xec/svelte-todo": "^1.0.4",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^9.4.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.2.17",
+		"prettier": "^3.3.0",
+		"prettier-plugin-svelte": "^3.2.3",
+		"svelte": "^5.0.0-next.148",
 		"svelte-awesome": "^3.3.1",
 		"svelte-check": "^3.8.0",
 		"tslib": "^2.6.2",
