poc: d4 mastery roll converter

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 	},
 	"devDependencies": {
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.10",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@sveltejs/adapter-static": "^3.0.4",
+		"@sveltejs/kit": "^2.5.24",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@typescript-eslint/eslint-plugin": "^7.11.0",
 		"@typescript-eslint/parser": "^7.11.0",
 		"@xec/snowflakes": "^0.0.8",
@@ -26,7 +26,7 @@
 		"eslint-plugin-svelte": "^2.39.0",
 		"prettier": "^3.3.0",
 		"prettier-plugin-svelte": "^3.2.3",
-		"svelte": "^5.0.0-next.148",
+		"svelte": "^5.0.0-next.240",
 		"svelte-awesome": "^3.3.1",
 		"svelte-check": "^3.8.0",
 		"tslib": "^2.6.2",
